<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/customSettings"
            android:gravity="center"
            android:textSize="25dp"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/forwardSmsStaticText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/forwardSms"/>
            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="20dp" />
            <CheckBox
                android:id="@+id/forwardSmsCheckbox"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sendSmsStaticText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/sendSms"/>
            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="20dp" />
            <CheckBox
                android:id="@+id/sendsmsCheckbox"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/pushNotificationsStaticText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/pushNotifications"/>
            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="20dp" />
            <CheckBox
                android:id="@+id/pushNotificationsCheckbox"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/findMyDeviceStaticText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/findMyDevice"/>
            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="20dp" />
            <CheckBox
                android:id="@+id/findMyDeviceCheckbox"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/findMyDeviceRingStaticText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/ringDevice"/>
            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="20dp" />
            <CheckBox
                android:id="@+id/findMyDeviceRingCheckbox"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/SaveSettings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="25dp"
        android:text="@string/saveSettings"
        android:layout_alignParentBottom="true"
        android:onClick="saveSettings"/>


</RelativeLayout>